Changes needed to implement SQLites storage

--- a/src/core-impl/storage/sql/CMakeLists.txt
+++ b/src/core-impl/storage/sql/CMakeLists.txt
@@ -1,6 +1,9 @@
 if( BUILD_MYSQLE_COLLECTION )
     add_subdirectory( mysqlestorage )
 endif()
+if( BUILD_SQLITE_COLLECTION )
+    add_subdirectory( sqlitestorage )
+endif()
 if( MySQL_FOUND )
     add_subdirectory( mysqlserverstorage )
 endif()
