--- a/src/core-impl/collections/db/sql/CMakeLists.txt
+++ b/src/core-impl/collections/db/sql/CMakeLists.txt
@@ -42,3 +42,4 @@ set_target_properties(amarok-sqlcollection PROPERTIES VERSION 1.0.0 SOVERSION 1 
 install(TARGETS amarok-sqlcollection ${INSTALL_TARGETS_DEFAULT_ARGS} )
 
 add_subdirectory( mysqlcollection )
+add_subdirectory( sqlitecollection )
