--- a/src/core-impl/storage/sql/sqlitestorage/CMakeLists.txt
+++ b/src/core-impl/storage/sql/sqlitestorage/CMakeLists.txt
@@ -9,13 +9,25 @@ set( amarok_storage-sqlitestorage_PART_SRCS
 
 add_library(amarok_storage-sqlitestorage MODULE ${amarok_storage-sqlitestorage_PART_SRCS})
 
-string(REPLACE "-Wl,--fatal-warnings" "" CMAKE_SHARED_LINKER_FLAGS_NOFATALWARN "${CMAKE_SHARED_LINKER_FLAGS}")
-set(CMAKE_SHARED_LINKER_FLAGS ${CMAKE_SHARED_LINKER_FLAGS_NOFATALWARN} )
+string(REPLACE "-Wl,--fatal-warnings" "" CMAKE_STATIC_LINKER_FLAGS_NOFATALWARN "${CMAKE_STATIC_LINKER_FLAGS}")
+set(CMAKE_STATIC_LINKER_FLAGS ${CMAKE_STATIC_LINKER_FLAGS_NOFATALWARN} )
 
 string(REPLACE "-Wl,--fatal-warnings" "" CMAKE_MODULE_LINKER_FLAGS_NOFATALWARN "${CMAKE_MODULE_LINKER_FLAGS}")
 set(CMAKE_MODULE_LINKER_FLAGS ${CMAKE_MODULE_LINKER_FLAGS_NOFATALWARN} )
 
+find_library(sqlite_cpp libSQLiteCpp.a)
+add_library(sqlite_cpp STATIC IMPORTED)
+set_target_properties(sqlite_cpp PROPERTIES IMPORTED_LOCATION ${sqlite_cpp})
+
+find_library(sqlite3 libsqlite3.a)
+add_library(sqlite3 STATIC IMPORTED)
+set_target_properties(sqlite3 PROPERTIES IMPORTED_LOCATION ${sqlite3})
+target_link_libraries(sqlite3 INTERFACE pthread dl)
+
+
 target_link_libraries(amarok_storage-sqlitestorage
+    sqlite_cpp
+    sqlite3
     amarokcore
     amaroklib
     Qt5::Core
